--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 
         <form id="message-form">
             <input name="message" type="text" placeholder="Type your message here"/>
+            <button id="send-location">Send Location</button>
             <button>Send</button>
         </form>
 
