--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,25 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="/css/styles.css">
     </head>
-    <body>
-        <p>Welcome to chat app!</p>
+    <body class="chat">
+        <div class="chat__sidebar">
+            <h3>People</h3>
+            <div id="users"></div>
+        </div>
 
-        <ol id="messages"></ol>
+        <div class="chat__main">
+            <ol id="messages" class="chat__messages"></ol>
 
-        <form id="message-form">
-            <input name="message" type="text" placeholder="Type your message here"/>
-            <button id="send-location">Send Location</button>
-            <button>Send</button>
-        </form>
+            <div class="chat__footer">
+                <form id="message-form">
+                    <input name="message" type="text" placeholder="Type your message here" autofocus autocomplete="off"/>                    
+                    <button>Send</button>
+                    <button id="send-location">Send Location</button>
+                </form>
+            </div>
+        </div>        
 
         <script src="/socket.io/socket.io.js"></script>
         <script src="/js/libs/jquery-3.3.1.min.js"></script>
